--- a/index.css
+++ b/index.css
@@ -151,6 +151,9 @@ margin-bottom: 0 !important;
     background-color: #1DA1F2;;
 }
 
+#DesktopFooterLink {
+    text-decoration: none;
+}
 
 #DesktopFooter {
     font-family: 'Varela Round';
@@ -165,7 +168,12 @@ margin-bottom: 0 !important;
     padding-bottom: 10px;
     margin-top: 2%;
     margin-bottom: 0%;
-    width: 20%;
+    width: 18%;
+}
+
+#DesktopFooter .footerCard h1 {
+    font-size: 1.2em;
+    margin-bottom: 0px;
 }
 
 /* Copyright */
