--- a/in-construction-sign.css
+++ b/in-construction-sign.css
@@ -35,7 +35,7 @@
     margin-right: auto;
     border-radius: 25px;
     border: none;
-    width: 40%;
+    width: 50%;
     padding-top: 10px;
     padding-bottom: 10px;
     text-align: center;
@@ -70,19 +70,17 @@
     }
 
     #desktopLayout {
+        width: 100%;
         display: flex;
         align-items: center;
-        margin-top: 7%;
-        margin-bottom: 7%;
+        margin-top: 3%;
+        /* margin-bottom: 7%; */
     }
 
     .responsiveImage {
         float: left;
-        width: 30%;
-        margin-left: 5%;
-        margin-right: 5%;
-        margin-top: 5%;
-        margin-bottom: 5%;
+        width: 40%;
+        margin: 5%;
     }
 
     .aboutContent {
@@ -90,13 +88,15 @@
     }
 
     .aboutMe {
+        width: 45%;
         margin-top: 0%;
-        margin-bottom: 5%;
-        margin-left: 0%;
+        margin-bottom: 0%;
+        margin-left: 5%;
     }
 
     .aboutMeText {
-        display: inline;
+        width: 30%;
+        /* display: inline; */
         font-size: 1em;
         margin-left: 0%;
     }
