--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ body, html {
     position: relative;
     display: flex; 
     justify-content: center;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
 }
 
 .hero-text {
@@ -34,6 +34,60 @@ body, html {
 
 .hero-text h1 {
     font-size: 1.6em;
+}
+
+/* About Me Sections */
+.sectionHeading {
+    margin-left: 6%;
+    margin-right: 6%;
+    margin-bottom: 5%; 
+}
+
+.left {
+    text-align: left;
+}
+
+.right {
+    text-align: right;
+}
+
+/* Square Frames */
+.square {
+    float: left;
+    position: relative;
+    width: 45%;
+    padding-bottom: 50%; /* = width for a 1:1 aspect ratio */
+    margin: 1.66%;
+    background-color:#1E1E1E;
+    overflow: hidden;
+
+    border: none !important;
+    border-top-right-radius: calc(.75rem - 1px) !important;
+    border-top-left-radius: calc(.75rem - 1px) !important;
+    border-bottom-right-radius: calc(.75rem - 1px) !important;
+    border-bottom-left-radius: calc(.75rem - 1px) !important;
+}
+
+.squareContent {
+    position: absolute;
+    height: 100%; /* = 100% - 2*10% padding */
+    width: 100%; /* = 100% - 2*5% padding */
+    /* background-color: red; */
+    margin: 0% 0%;
+}
+
+.table {
+    display:table;
+    height:100%;
+    width:100%;
+}
+.table-cell {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    height: 100%;
+    width: 100%;
+    color: white;
 }
 
 /* Social Icons */
@@ -121,6 +175,7 @@ margin-bottom: 0 !important;
 }
 
 #MobileFooter {
+    margin-top: 10%;
     margin-left: 6%;
     margin-right: 6%;
     padding-bottom: 5%;
@@ -185,6 +240,23 @@ margin-bottom: 0 !important;
     margin-bottom: 10%;
 }
 
+/* Colors */
+.blueLight {
+    color: #007AFF;
+}
+
+.blueDark {
+    color: #0A84FE;
+}
+
+.BUred {
+    background-color: #DE0000;
+}
+
+.SHPEblue {
+    background-color: #001F5B;
+}
+
 /* All Phones */
 @media only screen and (max-width: 768px) {
     #DesktopFooter {
@@ -196,6 +268,12 @@ margin-bottom: 0 !important;
         margin: 40px !important;
         margin-top: 0px !important;
         margin-bottom: 30px !important;
+    }
+
+    .square {
+        width: 80%;
+        padding-bottom: 90%; /* = width for a 1:1 aspect ratio */
+        margin-bottom: 5%;
     }
 }
 
@@ -245,7 +323,13 @@ margin-bottom: 0 !important;
         display: none;
     }
 
+    .sectionHeading {
+        margin-top: 2%;
+        margin-bottom: 0%;
+    }
+
     #MobileFooter {
+        
         display: none;
     }
 }
