--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-.navbar, .hero-text, .button, .card, .copyright, #MobileFooter, .footerCard {
+.navbar, .hero-text, .button, .card, .copyright, #MobileFooter, .footerCard, .sectionHeading {
     font-family: 'Varela Round';
 }
 
@@ -21,7 +21,7 @@ body, html {
     position: relative;
     display: flex; 
     justify-content: center;
-    margin-bottom: 5%;
+    /* margin-bottom: 5%; */
 }
 
 .hero-text {
@@ -38,9 +38,10 @@ body, html {
 
 /* About Me Sections */
 .sectionHeading {
+    margin-top: 6%;
     margin-left: 6%;
     margin-right: 6%;
-    margin-bottom: 5%; 
+    margin-bottom: 1%; 
 }
 
 .left {
@@ -55,9 +56,10 @@ body, html {
 .square {
     float: left;
     position: relative;
-    width: 45%;
-    padding-bottom: 50%; /* = width for a 1:1 aspect ratio */
+    width: 80%;
+    padding-bottom: 90%; /* = width for a 1:1 aspect ratio */
     margin: 1.66%;
+
     background-color:#1E1E1E;
     overflow: hidden;
 
@@ -72,7 +74,6 @@ body, html {
     position: absolute;
     height: 100%; /* = 100% - 2*10% padding */
     width: 100%; /* = 100% - 2*5% padding */
-    /* background-color: red; */
     margin: 0% 0%;
 }
 
@@ -175,7 +176,7 @@ margin-bottom: 0 !important;
 }
 
 #MobileFooter {
-    margin-top: 10%;
+    margin-top: 6%;
     margin-left: 6%;
     margin-right: 6%;
     padding-bottom: 5%;
@@ -212,6 +213,7 @@ margin-bottom: 0 !important;
 
 #DesktopFooter {
     font-family: 'Varela Round';
+    margin-top: 1.5%;
     padding-bottom: 5%;
 }
 
@@ -263,17 +265,15 @@ margin-bottom: 0 !important;
         display: none;
     }
 
+    #desktopSquare1, #desktopSquare2 {
+        display: none;
+    }
+
     .card {
         width: 100% !important;
         margin: 40px !important;
         margin-top: 0px !important;
         margin-bottom: 30px !important;
-    }
-
-    .square {
-        width: 80%;
-        padding-bottom: 90%; /* = width for a 1:1 aspect ratio */
-        margin-bottom: 5%;
     }
 }
 
@@ -300,7 +300,7 @@ margin-bottom: 0 !important;
     .hero-image {
         background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/banner.jpeg");
         height: 80%;
-        margin-bottom: 0%;
+        /* margin-bottom: 0%; */
     }
 
     .hero-text {
@@ -309,6 +309,23 @@ margin-bottom: 0 !important;
 
     .hero-text h1 {
         font-size: 2.2em;
+    }
+
+    .sectionHeading {
+        margin-left: 1.68%;
+        margin-right: 1.68%;
+        margin-top: 3%;
+        margin-bottom: 1%;
+    }
+
+    .square {
+        width: 45%;
+        padding-bottom: 50%; /* = width for a 1:1 aspect ratio */
+        margin: 1.66%;
+    }
+
+    #mobileSquare1, #mobileSquare2 {
+        display: none;
     }
 
     #mobileSocialLinks {
@@ -323,10 +340,7 @@ margin-bottom: 0 !important;
         display: none;
     }
 
-    .sectionHeading {
-        margin-top: 2%;
-        margin-bottom: 0%;
-    }
+
 
     #MobileFooter {
         
