--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-.navbar, .hero-text, .button, #desktopMemojiHeader, #mobileHeadline, .card, .copyright, #MobileFooter, .footerCard, .sectionHeading {
+.navbar, .hero-text, .button, #desktopMemojiHeader, #mobileHeadline, .card, .copyright, #MobileFooter, .footerCard, .sectionHeading, .rectangleContent {
     font-family: 'Varela Round';
 }
 
