--- a/my-science-guide.css
+++ b/my-science-guide.css
@@ -26,7 +26,7 @@
 
 .sectionText {
     font-size: 1em;
-    font-weight: bold;
+    /* font-weight: bold; */
     margin-left: 7%;
     margin-right: 7%;
 }
