--- a/about.css
+++ b/about.css
@@ -57,8 +57,8 @@ color: #ea4c89  ;
 .resumeButton {
     display: block;
     margin-top: 5%;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 1%;
+    margin-right: 1%;
     border-radius: 25px;
     border: none;
     width: 40%;
@@ -67,6 +67,11 @@ color: #ea4c89  ;
     text-align: center;
     color: white;
     background-color: black;
+}
+
+.resumeButton:hover {
+    color: white;
+    text-decoration: none
 }
 
 .copyright {
@@ -130,5 +135,10 @@ color: #ea4c89  ;
 
     .socialIcons {
         margin-top: 5%;
+    }
+
+    .resumeButton {
+        width: 40%;
+        margin: 5%;
     }
 }
