--- a/index.css
+++ b/index.css
@@ -319,10 +319,17 @@ margin-bottom: 0 !important;
     background-color: #DE0000;
 }
 
+.PVBlack {
+    background-color: #000000;
+}
+
 .SHPEblue {
     background-color: #001F5B;
 }
 
+.INNOVPurple {
+    background-color: #665BC5;
+}
 
 
 
